[gd_scene load_steps=4 format=3 uid="uid://bnb03ahupuh0o"]

[ext_resource type="Script" uid="uid://bmy4c6l2igtmt" path="res://menu.gd" id="1_uubjt"]
[ext_resource type="Texture2D" uid="uid://dpphb0stafgca" path="res://assets/img/titlescreen.png" id="2_5yleq"]

[sub_resource type="LabelSettings" id="LabelSettings_lthh4"]
font_size = 36

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uubjt")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1001, 643)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 468.0
offset_right = 1200.0
offset_bottom = 854.0
color = Color(0.512023, 0.535367, 0.570889, 1)

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(1152, 0)
layout_mode = 0
offset_left = 425.0
offset_top = 494.0
offset_right = 1577.0
offset_bottom = 544.0
text = "Project Butterfly"
label_settings = SubResource("LabelSettings_lthh4")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 370.0
offset_right = 1184.0
offset_bottom = 1018.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Jouer" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Jouer"

[node name="Crédits" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Crédits"

[node name="Mode Infini" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Mode Infini"

[node name="Quitter" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quitter"

[node name="Titlescreen" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(965.5, 604.375)
scale = Vector2(1.953, 1.953)
texture = ExtResource("2_5yleq")
metadata/_edit_lock_ = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Crédits" to="." method="_on_crédits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Mode Infini" to="." method="_on_mode_infini_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
